--- a/aboutme.css
+++ b/aboutme.css
@@ -1,3 +1,43 @@
+
+nav{
+  display: flex;
+  justify-content: space-between;
+  background-color: #3B4645ff;
+}
+.thyca-btn {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 200px;
+  height: 60px;
+  font-size: 18px;
+  cursor: pointer;
+  /* padding-left: 50px; */
+  /* margin: 20px 0; */
+  margin-left: 20px;
+  /* color: #ffffff; */
+  background-color: #3B4645ff;
+}
+
+.buttonimage{
+  width: 225px;
+  height:50px;
+  border-radius: 8px;
+}
+
+nav ul {
+  display: flex;
+  align-items: center;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+
+
+
 * {box-sizing:border-box}
 
 /* Slideshow container */
